tests/fixtures/errors/interp_resultval.z
main: function is {
    x: 300.u64
    r: x.u8
    print "value=\{r} end"
}
