tests/fixtures/errors/interp_resultval.err
error[E0500]: zemitterc: unhandled interp part type resultval_u8_convError [line 4]
1 error found
